# autonomous-skid-steer-vehicle

./: .gitignore  LICENSE  README.md
docs/: GIT_CONVENTION.md
rpi_ws/dkbuild/dt/: Dockerfile
rpi_ws/dkbuild/js/joy2can/: CMakeLists.txt  package.xml
rpi_ws/dkbuild/ssv/: Dockerfile
rpi_ws/dkbuild/ssv/skid_steer_vehicle/: CMakeLists.txt  package.xml
rpi_ws/dkbuild/ssv/skid_steer_vehicle/include/skid_steer_vehicle/: state.hpp
rpi_ws/dkbuild/ssv/skid_steer_vehicle/launch/: bringup.launch.xml
rpi_ws/dkbuild/ssv/skid_steer_vehicle/src/: frame_to_topic.cpp  state_manager.cpp  tcp_sender.cpp  topic_to_frame.cpp
rpi_ws/dkrun/: bridge.sh  dt.sh  js.sh  ssv.sh
rpi_ws/src/js/: Dockerfile
rpi_ws/src/js/joy2can/: CMakeLists.txt
simulink_models/tc375_controller/: skid_steer_controller.hex  skid_steer_controller.mdf  skid_steer_controller.slx
tc375_fw/.metadata/: version.ini
tc375_fw/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
tc375_fw/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
tc375_fw/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
tc375_fw/src/.metadata/: version.ini
tc375_fw/src/Pori/: .cproject  .project  Cpu0_Main.c
tc375_fw/src/Pori/TriCore Debug (TASKING)/: Asclin.d  Can.d  CompilerDcc.d  CompilerGcc.d  CompilerGhs.d  CompilerGnuc.d  CompilerTasking.d  Cpu0_Main.d  Cpu0_Main.src  Cpu1_Main.d  Cpu1_Main.src  Cpu2_Main.d  Cpu2_Main.src  IfxAsclin_PinMap.d  IfxAsclin_cfg.d  IfxCan_PinMap.d  IfxCan_cfg.d  IfxCcu6_PinMap.d  IfxCcu6_cfg.d  IfxCpu.d  IfxCpu_Irq.d  IfxCpu_Trap.d  IfxCpu_cfg.d  IfxDma_cfg.d  IfxDmu_PinMap.d  IfxEdsadc_PinMap.d  IfxEray_PinMap.d  IfxEray_cfg.d  IfxEvadc_PinMap.d  IfxEvadc_cfg.d  IfxFlash_cfg.d  IfxGeth_PinMap.d  IfxGeth_cfg.d  IfxGpt12_PinMap.d  IfxGtm.d  IfxGtm_Atom.d  IfxGtm_Cmu.d  IfxGtm_Dpll.d  IfxGtm_Dtm.d  IfxGtm_PinMap.d  (+54 more)
tc375_fw/src/mypj/: .cproject  .project  Bluetooth.c  Bluetooth.h  Buzzer.c  Buzzer.h  Cpu0_Main.c  Cpu0_Main.h  Cpu1_Main.c  Cpu2_Main.c  ERU.c  ERU.h  EV_ADC.c  EV_ADC.h  Encoder.c  Encoder.h  GPIO.c  GPIO.h  Motor.c  Motor.h  PID.c  PID.h  Sys_Init.c  Sys_Init.h  UltraSonic.c  UltraSonic.h  gpt12.c  gpt12.h  isr_priority.h  stm.c  stm.h
tc375_fw/src/mypj/MATLAB/: rtGetInf.c  rtGetNaN.h  rtmodel.h  rtwtypes.h  skid_steer_controller.h  skid_steer_controller_private.h  skid_steer_controller_types.h
tc375_fw/src/mypj/TriCore Debug (TASKING)/: Abe.d  Aeb.d  Assert.d  Bluetooth.d  Bluetooth.src  Bsp.d  Buzzer.d  Buzzer.src  CompilerDcc.d  CompilerGcc.d  CompilerGhs.d  CompilerGnuc.d  CompilerTasking.d  Cpu0_Main.d  Cpu0_Main.src  Cpu1_Main.d  Cpu1_Main.src  Cpu2_Main.d  Cpu2_Main.src  ERU.d  ERU.src  EV_ADC.d  EV_ADC.src  Encoder.d  GPIO.d  GPIO.src  IfxAsclin_PinMap.d  IfxAsclin_cfg.d  IfxCan.d  IfxCan_Can.d  IfxCan_PinMap.d  IfxCan_cfg.d  IfxCcu6_PinMap.d  IfxCcu6_cfg.d  IfxCpu.d  IfxCpu_Irq.d  IfxCpu_Trap.d  IfxCpu_cfg.d  IfxDma_cfg.d  (+96 more)
(+380 files in other folders)
